--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             text-align: center;
             box-sizing: border-box; /* Dodanie box-sizing dla prawidłowego obliczania szerokości */
             padding: 20px; /* Dodanie domyślnego marginesu wewnętrznego */
+            font-size: 100px;
         }
 
         @media (max-width: 768px) { /* Zapytanie dla ekranów mniejszych niż 768px */
